# pushgo-android

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android-release.yml
app/: build.gradle.kts  google-services.json  google-services.json.example
app/src/androidTest/java/io/ethan/pushgo/integration/: ProviderGatewayIntegrationDeviceTest.kt
app/src/debug/java/io/ethan/pushgo/automation/: PushGoAutomation.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/ethan/pushgo/: MainActivity.kt  PushGoApp.kt
app/src/main/java/io/ethan/pushgo/data/: AppAutomationController.kt  (+26 more)
app/src/main/res/drawable/: vector.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/resources/: update_feed_beta10.json
commonMain/androidx/compose/material3/: Text.kt
commonMain/androidx/compose/ui/text/: AnnotatedString.kt  LinkAnnotation.kt  LinkInteractionListener.kt
commonMain/androidx/room/: RoomDatabase.kt
gradle/: gradle-daemon-jvm.properties
native/quinn-jni/: Cargo.toml  build-android.sh
native/quinn-jni/include/: pushgo_quinn_jni.h
native/quinn-jni/src/: lib.rs
release/: CHANGELOG.md  RELEASE_NOTES.md  update-feed-v1.json
release/update-notes/: README.md  v1.2.0-beta.1.json  v1.2.0-beta.11.json  v1.2.0-beta.12.json  v1.2.0-beta.13.json  v1.2.0-beta.15.json  v1.2.0-beta.3.json  v1.2.0.json  v1.2.1.json  v1.2.2.json  v1.3.0-beta.1.json
scripts/: device_update_e2e_matrix.sh  device_update_smoke.sh  generate_update_deploy_config.sh  generate_update_feed.sh  publish_update_artifacts.sh  verify_update_feed.sh
(+154 files in other folders)
