[package]
name = "pushgo_quinn_jni"
version = "0.1.0"
edition = "2024"

[lib]
name = "pushgo_quinn_jni"
crate-type = ["cdylib"]

[dependencies]
jni = "0.22.1"
once_cell = "1.21.3"
tokio = { version = "1.49.0", features = [
    "io-util",
    "rt-multi-thread",
    "time",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1.3", features = ["use-std"] }
warp-link = { path = "../../../warp-link/crates/warp-link" }
pushgo-warp-profile = { path = "../../../warp-link/crates/pushgo-warp-profile" }
