[package]
name = "pushgo_quinn_jni"
version = "0.1.0"
edition = "2024"

[lib]
name = "pushgo_quinn_jni"
crate-type = ["cdylib"]

[dependencies]
jni = "0.22.4"
once_cell = "1.21.4"
tokio = { version = "1.52.1", features = [
    "io-util",
    "rt-multi-thread",
    "time",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.1.3", features = ["use-std"] }
warp-link = { git = "https://github.com/AldenClark/warp-link", rev = "51f0b1c5829c2fbd65e2caa881d2c4b0ce7d1328" }
pushgo-warp-profile = { git = "https://github.com/AldenClark/warp-link", rev = "51f0b1c5829c2fbd65e2caa881d2c4b0ce7d1328" }
